:bug: bug fixes